--- a/Shiny-ranSeq/README.html
+++ b/Shiny-ranSeq/README.html
@@ -119,10 +119,23 @@ $(document).ready(function () {
 </div>
 
 
-<div id="a-small-app-for-sequence-extraction-from-fas-and-nexus" class="section level1">
-<h1>A small app for sequence extraction from fas and nexus</h1>
+<div id="a-small-tool-for-sequence-extraction" class="section level3">
+<h3>A small tool for sequence extraction</h3>
+<hr />
+<blockquote>
+<p>v20171015</p>
+</blockquote>
+<div id="note" class="section level4">
+<h4>Note:</h4>
+<ol style="list-style-type: decimal">
+<li>Including blank or marks other than “-” or “_&quot; in sequence names would inference readin</li>
+<li>This app will never collected your sequence data</li>
+<li>…</li>
+</ol>
+<hr />
+</div>
 <div id="link" class="section level4">
-<h4><a href="https://yaotli.shinyapps.io/">link</a></h4>
+<h4><a href="https://yaotli.shinyapps.io/ranSeq/">link</a></h4>
 </div>
 </div>
 
